--- a/public/hashover.html
+++ b/public/hashover.html
@@ -130,6 +130,7 @@ header(&quot;Access-Control-Allow-Credentials:true&quot;);
 <h3>几个魔改想法（尚未实现）：</h3>
 
 <ul>
+<li>加上表情包</li>
 <li>加上显示地区和UA</li>
 <li>加上评论等级</li>
 <li>在不启用密码的情况下做评论管理</li>
