--- a/public/archive.html
+++ b/public/archive.html
@@ -105,7 +105,7 @@
 		<span class="abctxt"><img src="/images/upyun.png"></span>
 		<span class="abctxt">提供</span>
 	</span>
-    <span class="publish">Powered by <a href="http://www.chole.io/" target="_blank">Ink</a></span>
+    <span class="publish">闽ICP备14012513号-1 Powered by <a href="http://www.chole.io/" target="_blank">Ink</a></span>
 </footer>
 
     </body>
