--- a/theme/article.html
+++ b/theme/article.html
@@ -52,6 +52,7 @@
 			{{template "comment" .}}
 		</article>
         {{template "footer" .}}
-        <script src="{{.Site.Root}}/bundle/index.js"></script>
+    <script src="{{.Site.Root}}/bundle/index.js"></script>
+    <script src="{{.Site.Root}}/bundle/instantClick.js" data-no-instant></script>
     </body>
 </html>
