--- a/public/archive.html
+++ b/public/archive.html
@@ -58,7 +58,7 @@
   <ul class="menu">
       <li class="menu-item"><a href="/archive.html">归档</a></li>
       <li class="menu-item"><a href="/tag.html">标签</a></li>
-      <li class="menu-item"><a href="/atom.xml">订阅</a></li>
+      <li class="menu-item"><a  data-no-instant href="/atom.xml">订阅</a></li>
   </ul>
 </header>
 
@@ -96,7 +96,7 @@
         <footer class="footer">
     <span class="copyright">
         翁の微语 ©
-        <script type="text/javascript">
+        <script type="text/javascript"  data-no-instant>
             document.write(new Date().getFullYear());
         </script>
     </span>
