--- a/public/index.html
+++ b/public/index.html
@@ -59,7 +59,7 @@
 				<ul class="header-menu">
 					<li class="menu-item"><a href="/archive.html">归档</a></li>
 					<li class="menu-item"><a href="/tag.html">标签</a></li>
-					<li class="menu-item"><a href="/atom.xml">订阅</a></li>
+					<li class="menu-item"><a  data-no-instant href="/atom.xml">订阅</a></li>
 				</ul>
 				<div class="header-right">
 					<div class="search-wrap">
@@ -129,7 +129,7 @@
         <footer class="footer">
     <span class="copyright">
         翁の微语 ©
-        <script type="text/javascript">
+        <script type="text/javascript"  data-no-instant>
             document.write(new Date().getFullYear());
         </script>
     </span>
@@ -141,6 +141,7 @@
     <span class="publish">闽ICP备14012513号-1 Powered by <a href="http://www.chole.io/" target="_blank">Ink</a></span>
 </footer>
 
+		<script src="/bundle/index.js"></script>
+		<script src="/bundle/instantClick.js" data-no-instant></script>
     </body>
-    <script src="/bundle/index.js"></script>
 </html>
