--- a/theme/_comment.html
+++ b/theme/_comment.html
@@ -1,5 +1,6 @@
 {{if .Site.Comment}}
 <div id="comment">
-	<script src="https://comment.homeii.info"></script>
+	<div id="hashover"></div>
+	<script id="e123say" src="https://comment.homeii.info" async></script>
 </div>
 {{end}}
