--- a/theme/_footer.html
+++ b/theme/_footer.html
@@ -1,7 +1,7 @@
 <footer class="footer">
     <span class="copyright">
         {{.Site.Title}} ©
-        <script type="text/javascript">
+        <script type="text/javascript"  data-no-instant>
             document.write(new Date().getFullYear());
         </script>
     </span>
