--- a/theme/page.html
+++ b/theme/page.html
@@ -9,7 +9,7 @@
         <title>{{.Site.Title}}</title>
     </head>
     <body>
-			{{if .TagName}}{{else}}
+			{{if .TagName}}{{template "header" .}}{{else}}
 			<div class="header-home">
 				<div class="header-left">
 					<h1>{{.Site.Title}}</h1>
@@ -18,7 +18,7 @@
 				<ul class="header-menu">
 					<li class="menu-item"><a href="{{.Site.Root}}/archive.html">{{i18n "archive"}}</a></li>
 					<li class="menu-item"><a href="{{.Site.Root}}/tag.html">{{i18n "tag"}}</a></li>
-					{{if .Site.Url}}<li class="menu-item"><a href="{{.Site.Root}}/atom.xml">{{i18n "rss"}}</a></li>{{end}}
+					{{if .Site.Url}}<li class="menu-item"><a  data-no-instant href="{{.Site.Root}}/atom.xml">{{i18n "rss"}}</a></li>{{end}}
 				</ul>
 				<div class="header-right">
 					{{template "search" .}}
@@ -65,6 +65,7 @@
             </article>
         </article>
         {{template "footer" .}}
+		<script src="{{.Site.Root}}/bundle/index.js"></script>
+		<script src="{{.Site.Root}}/bundle/instantClick.js" data-no-instant></script>
     </body>
-    <script src="{{.Site.Root}}/bundle/index.js"></script>
 </html>
