--- a/public/hashover.html
+++ b/public/hashover.html
@@ -161,7 +161,7 @@ header(&quot;Access-Control-Allow-Credentials:true&quot;);
 			
 <div id="comment">
 	<div id="hashover"></div>
-	<script id="e123say" src="https://comment.homeii.info" async></script>
+	<script id="e123say" data-url="http://blog.e123.pw/hashover.html" src="https://comment.homeii.info" async></script>
 </div>
 
 
