--- a/public/about.me.html
+++ b/public/about.me.html
@@ -97,7 +97,8 @@
 			
 <div id="comment">
 	<div id="hashover"></div>
-	<script id="e123say" data-url="http://blog.e123.pw/about.me.html" src="https://comment.homeii.info" async></script>
+	<script>_http_page="http:\/\/blog.e123.pw/about.me.html"</script>
+	<script id="e123say" src="https://comment.homeii.info" async></script>
 </div>
 
 
