--- a/public/new-start.html
+++ b/public/new-start.html
@@ -102,7 +102,8 @@
 			
 <div id="comment">
 	<div id="hashover"></div>
-	<script id="e123say" data-url="http://blog.e123.pw/new-start.html" src="https://comment.homeii.info" async></script>
+	<script>_http_page="http:\/\/blog.e123.pw/new-start.html"</script>
+	<script id="e123say" src="https://comment.homeii.info" async></script>
 </div>
 
 
