add baidu tongji

--- a/public/archive.html
+++ b/public/archive.html
@@ -42,6 +42,15 @@
     var root = '';
 </script>
 
+<script>
+	var _hmt = _hmt || [];
+	(function() {
+	  var hm = document.createElement("script");
+	  hm.src = "https://hm.baidu.com/hm.js?08fc53efb438431ff8bd6f4574cdfcd7";
+	  var s = document.getElementsByTagName("script")[0]; 
+	  s.parentNode.insertBefore(hm, s);
+	})();
+</script>
 
         <meta name="keywords" content="翁の微语, 一个博客 · 一方净土">
         <meta name="description" content="一个博客 · 一方净土">
