--- a/public/hashover.html
+++ b/public/hashover.html
@@ -42,6 +42,15 @@
     var root = '';
 </script>
 
+<script>
+	var _hmt = _hmt || [];
+	(function() {
+	  var hm = document.createElement("script");
+	  hm.src = "https://hm.baidu.com/hm.js?08fc53efb438431ff8bd6f4574cdfcd7";
+	  var s = document.getElementsByTagName("script")[0]; 
+	  s.parentNode.insertBefore(hm, s);
+	})();
+</script>
 
         <meta name="keywords" content="博客,程序,评论,">
         <meta name="description" content="使用&amp;魔改hashover评论系统">
