--- a/theme/_head.html
+++ b/theme/_head.html
@@ -61,3 +61,12 @@
     connect();
 </script>
 {{end}}
+<script>
+	var _hmt = _hmt || [];
+	(function() {
+	  var hm = document.createElement("script");
+	  hm.src = "https://hm.baidu.com/hm.js?08fc53efb438431ff8bd6f4574cdfcd7";
+	  var s = document.getElementsByTagName("script")[0]; 
+	  s.parentNode.insertBefore(hm, s);
+	})();
+</script>
