--- a/public/hashover.html
+++ b/public/hashover.html
@@ -197,6 +197,6 @@ header(&quot;Access-Control-Allow-Credentials:true&quot;);
 </footer>
 
     <script src="/bundle/index.js"></script>
-    <script src="/bundle/instantClick.js" data-no-instant></script>
+    <script src="/bundle/instantClick.js?v1" data-no-instant></script>
     </body>
 </html>
