--- a/public/limitpng-online.html
+++ b/public/limitpng-online.html
@@ -150,6 +150,6 @@ zopflipng -m -y 文件名  文件名
 </footer>
 
     <script src="/bundle/index.js"></script>
-    <script src="/bundle/instantClick.js" data-no-instant></script>
+    <script src="/bundle/instantClick.js?v1" data-no-instant></script>
     </body>
 </html>
