--- a/public/new-start.html
+++ b/public/new-start.html
@@ -133,6 +133,6 @@
 </footer>
 
     <script src="/bundle/index.js"></script>
-    <script src="/bundle/instantClick.js" data-no-instant></script>
+    <script src="/bundle/instantClick.js?v1" data-no-instant></script>
     </body>
 </html>
