--- a/theme/page.html
+++ b/theme/page.html
@@ -66,6 +66,6 @@
         </article>
         {{template "footer" .}}
 		<script src="{{.Site.Root}}/bundle/index.js"></script>
-		<script src="{{.Site.Root}}/bundle/instantClick.js" data-no-instant></script>
+		<script src="{{.Site.Root}}/bundle/instantClick.js?v1" data-no-instant></script>
     </body>
 </html>
