--- a/public/archive.html
+++ b/public/archive.html
@@ -88,7 +88,7 @@
                             
                             <li class="article-item">
                                 <span class="date">2017-08-18</span>
-                                <a href="hashover-mail-emoji.html">hashover系列第二篇：SMTP发邮件</a>
+                                <a href="hashover-smtp.html">hashover系列第二篇：SMTP发邮件</a>
                             </li>
                             
                             <li class="article-item">
