--- a/public/hashover-smtp.html
+++ b/public/hashover-smtp.html
@@ -56,7 +56,7 @@
         <meta name="description" content="hashover系列第二篇：SMTP发邮件">
         <meta name="author" content="某翁">
 		
-		<link rel="canonical" href="http://blog.e123.pw/hashover-mail-emoji.html">
+		<link rel="canonical" href="http://blog.e123.pw/hashover-smtp.html">
         <title>hashover系列第二篇：SMTP发邮件</title>
     </head>
     <body>
@@ -313,7 +313,7 @@ $result = $mail-&gt;send();
 			
 <div id="comment">
 	<div id="hashover"></div>
-	<script>_http_page="http:\/\/blog.e123.pw/hashover-mail-emoji.html"</script>
+	<script>_http_page="http:\/\/blog.e123.pw/hashover-smtp.html"</script>
 	<script id="e123say" src="https://comment.homeii.info" async></script>
 </div>
 
